Remove deprecated code and update to modern practices (#131)